# zoore_layer

./: .envrc  .gitignore  Cargo.toml  LICENSE  readme.md
.github/workflow/: build-release.yml
.github/workflows/: build-release.yml
src/: main.rs  watch.rs
src/styles/: master.scss  style.css
src/ui/: TopBat.cmb  top_bar.cmb  top_bar.ui  topbat.ui
src/utils/: exec_async.rs  mod.rs
src/widgets/top_bar/: border_buttons.rs  media_box.rs  mod.rs  top_bar_master.rs  workspace_renderer.rs
src/widgets/top_bar/ui/: top_bar.cmb  top_bar.ui
