[package]
name = "zoore_layer_shell"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "0.19.5"
gtk = { version = "0.8.2", package = "gtk4", features = ["v4_14"] }
gtk4-layer-shell = "0.3.0"
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", branch = "master" }
notify = "6.1.1"
tokio = { version = "1.38.0", features = ["full"] }
